--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pusat Pengaduan Ajaib | Call Center CS Ajaib Sekuritas & Kripto</title>
+    <meta name="google-site-verification" content="CT_0ExaEBr0Z7xb4XAjtT-zV671f5qaOmgjtSntVQxQ" />
 
     <!-- Meta SEO -->
     <meta name="description" content="Hubungi Call Center CS Ajaib Sekuritas & Kripto di WhatsApp +62 851-21111-031. Layanan 24 jam untuk pengaduan, KYC, deposit, dan trading investasi.">
